add error timeout

--- a/src/app/core/layout/pages/report/editreport/editreport.component.html
+++ b/src/app/core/layout/pages/report/editreport/editreport.component.html
@@ -25,7 +25,7 @@ Create Report Title
             </div>
             <!-- Modal body -->
             <form action="#">
-                <span class="text-red-600">{{ error }}</span>
+                <span *ngIf="error" class="text-red-600">{{ error }}</span>
                 <div class="grid gap-4 mb-4 text-center sm:grid-cols-1 ">
                     <div>
                         <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Title</label>
