--- a/src/app/core/layout/pages/workspace/joinworkspace/joinworkspace.component.html
+++ b/src/app/core/layout/pages/workspace/joinworkspace/joinworkspace.component.html
@@ -14,7 +14,7 @@
                         <input type="text" id="workspaceId" [(ngModel)]="userWorkspaceData.workspace_id"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block mb-3 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="Workspace" required />
-                            <span class="text-red-600">{{ error }}</span>
+                            <span *ngIf="error" class="text-red-600">{{ error }}</span>
                     </div>
                 </div>
             </div>
