--- a/src/app/core/layout/pages/workspace/workspacelist/workspacelist.component.html
+++ b/src/app/core/layout/pages/workspace/workspacelist/workspacelist.component.html
@@ -15,25 +15,27 @@
               class="flex flex-col md:flex-row items-stretch md:items-center md:space-x-3 space-y-3 md:space-y-0 justify-between mx-4 py-4 dark:border-gray-700">
               <div class="w-full md:w-1/2">
                 <div class="relative w-full">
-                  <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                    <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor"
-                      viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
-                    </svg>
+                  <div
+                      class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                      <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400"
+                          fill="currentColor" viewbox="0 0 20 20"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd"
+                              d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
+                      </svg>
                   </div>
                   <input type="text" [(ngModel)]="workspace_filter" (keydown.enter)="searchWorkspace()"
-                    id="simple-search" placeholder="Search for workspaces"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-primary-500 dark:focus:border-primary-500">
-                </div>
+                      id="simple-search" placeholder="Search for workspaces"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-primary-500 dark:focus:border-primary-500">
+              </div>
               </div>
 
               <div
                 class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
                 <button (click)="navigateToJoinWorkspace()"
-                  class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
-                  Join Workspace
-                </button>
+                class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
+                Join Workspace
+              </button>
                 <button (click)="navigateToCreateWorkspace()"
                   class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
                   Create Workspace
@@ -49,13 +51,13 @@
                     <th scope="col" class="p-4 whitespace-nowrap">Workspace ID</th>
                     <th scope="col" class="p-4 whitespace-nowrap">Workspace Name</th>
                     <th scope="col" class="p-4 whitespace-nowrap">Owner</th>
-                    <th scope="col" class="p-2 whitespace-nowrap">Date and Time Created</th>
-                    <th scope="col" class="p-2 whitespace-nowrap">Date and Time Modified</th>
+                    <th scope="col" class="p-2 whitespace-nowrap">Date Created</th>
+                    <th scope="col" class="p-2 whitespace-nowrap">Last Edited</th>
                     <th scope="col" class="p-2 whitespace-nowrap">Actions</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let workspace of workspaces" class="border-b text-blue-600 hover:bg-gray-100 ">
+                  <tr *ngFor="let workspace of workspaces" class="border-b text-black hover:bg-gray-100 ">
                     <th scope="row" class="py-2 px-6  font-medium whitespace-nowrap ">
                       <div class="flex items-center justify-center text-center">
                         <h2>{{ workspace["workspace_id"] }}</h2>
@@ -66,9 +68,10 @@
                         <h2>{{ workspace.name }}</h2>
                       </div>
                     </td>
-                    <td scope="row" class="py-2  px-6  font-medium whitespace-nowrap ">
+                    <td scope="row" class="py-2 px-6 font-medium whitespace-nowrap">
                       <div class="flex items-center justify-start">
-                        <h2>{{ workspace.role_name }}</h2>
+                        <h2 *ngIf="workspace.role_id === 1">Me</h2>
+                        <h2 *ngIf="workspace.role_id === 3">{{ workspace.username }}</h2>
                       </div>
                     </td>
                     <td class="px-6 py-3 font-medium whitespace-nowrap">
@@ -82,37 +85,29 @@
                       </div>
                     </td>
                     <td class="flex justify-center items-center px-6 py-3 font-medium whitespace-nowrap">
-                      <button id="dropdownMenuIconButton" data-dropdown-toggle="dropdownDots + i"
-                        class="inline-flex items-center p-2 text-sm font-medium text-center text-gray-900 bg-white rounded-lg hover:bg-gray-100 focus:ring-4 focus:outline-none dark:text-white focus:ring-gray-50 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                        type="button">
-                        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                          viewBox="0 0 4 15">
-                          <path
-                            d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" />
-                        </svg>
+                      <div class="flex items-center justify-evenly gap-3 min-w-80 max-w-md">
+
+                        <button (click)="openWorkspace(workspace.workspace_id)"
+                          class="py-2 px-3 flex items-center text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200   gap-2">
+                          <img src="../../../../../../assets/img/eye.png" alt="edit logo" class="w-5 h-5">
+                          <span>Open</span>
+                        </button>
+                        <button  *ngIf="workspace['role_name'] === 'superadmin'" type="button" (click)="editWorkspace(workspace['workspace_id'])"
+                        class="py-2 px-3 flex items-center text-sm font-medium text-black text-center bg-white border border-gray-300 rounded-lg hover:text-blue-500 focus:ring-4  dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
+                          <img src="../../../../../../assets/img/edit-icon.png" alt="edit logo" class="w-5 h-5">
+                          <span>Edit</span>
+                        </button>
+                        <button *ngIf="workspace['role_name'] === 'superadmin'" type="button" (click)="deleteWorkspace(workspace['workspace_id'])"
+                          class="flex items-center text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2 text-center ">
+                          <img src="../../../../../../assets/img/delete.png" alt="edit logo" class="w-5 h-5">
+                          <span>Delete</span> <!-- change to leave when not1-->
+                        </button>
+                        <button *ngIf="workspace['role_name'] !== 'superadmin'" type="button" (click)="leaveWorkspace(workspace['workspace_id'])"
+                        class="flex items-center text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2 text-center ">
+                        <img src="../../../../../../assets/img/exit.png" alt="leave logo" class="w-5 h-5 pr-1">
+                        <span>Leave</span> <!-- change to leave when not1-->
                       </button>
-
-                      <!-- Dropdown menu -->
-                      <div id="dropdownDots + i"
-                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-32 dark:bg-gray-700 dark:divide-gray-600">
-                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                          aria-labelledby="dropdownMenuIconButton">
-                          <li>
-                            <a (click)="openWorkspace(workspace.workspace_id)"
-                              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Open</a>
-                          </li>
-                          <li>
-                            <a (click)="editWorkspace(workspace['workspace_id'])"
-                              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
-                          </li>
-                          <li>
-                            <a (click)="leaveWorkspace(workspace['workspace_id'])"
-                              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Delete</a>
-                          </li>
-                        </ul>
-
                       </div>
-
                     </td>
                   </tr>
 
