--- a/src/app/core/layout/pages/report/createreport/createreport.component.html
+++ b/src/app/core/layout/pages/report/createreport/createreport.component.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="flex justify-center gap-5">
-                    <button (click)="navigateToTemplate()" type="submit" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
+                    <button (click)="createReport()" type="submit" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
                        Next
                     </button>
                     <button (click)="goToReports()" type="button" class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800 mr-2" data-modal-toggle="defaultModal">
