--- a/src/app/core/layout/pages/report/createreport/createreport.component.html
+++ b/src/app/core/layout/pages/report/createreport/createreport.component.html
@@ -18,19 +18,19 @@
                 </div>
             </div>
             <!-- For Faculty Matrix -->
-            <form action="#">
+            <form (ngSubmit)="createReport()">
                 <span *ngIf="error" class="text-red-600">{{ error }}</span>
                 <div class="grid gap-4 mb-4 text-center sm:grid-cols-1 ">
                     <div>
                         <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Title</label>
-                        <input [(ngModel)] = "report.title" type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Type Title" required="">
+                        <input [(ngModel)]="report.title" type="text" name="title" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Type Title" required>
                     </div>
                 </div>
                 <div class="flex justify-center gap-5">
-                    <button (click)="createReport()" type="submit" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
+                    <button type="submit" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
                        Next
                     </button>
-                    <button (click)="goToReports()" type="button" class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800 mr-2" data-modal-toggle="defaultModal">
+                    <button (click)="goToReports()" type="button" class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800 mr-2">
                         Cancel
                     </button>
                 </div>
