--- a/src/app/core/layout/pages/report/createreport/createreport.component.html
+++ b/src/app/core/layout/pages/report/createreport/createreport.component.html
@@ -13,24 +13,30 @@
                     Create Report
                 </h3>
                 <div class="relative">
-                    
+                    <select name="report_type" id="report_type" [(ngModel)]="report.report_type_id" 
+                    class="text-black bg-white rounded-lg shadow-md hover:bg-gray-100 dark:hover:bg-gray-700 group mt-5 px-4 py-2 w-full max-w-xs sm:max-w-md md:max-w-lg lg:max-w-xl xl:max-w-2xl">
+                        <option value="0">Select report type</option>
+                        <option value="1">Faculty Matrix</option>
+                        <option value="2">Accomplishment Report</option>
+                    </select>
+            
                     <!-- Dropdown Content -->
                 </div>
             </div>
             <!-- For Faculty Matrix -->
-            <form (ngSubmit)="createReport()">
-                <span *ngIf="error" class="text-red-600">{{ error }}</span>
+            <form action="#">
+                <span class="text-red-600">{{ error }}</span>
                 <div class="grid gap-4 mb-4 text-center sm:grid-cols-1 ">
                     <div>
                         <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Title</label>
-                        <input [(ngModel)]="report.title" type="text" name="title" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Type Title" required>
+                        <input [(ngModel)] = "report.title" type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Type Title" required="">
                     </div>
                 </div>
                 <div class="flex justify-center gap-5">
-                    <button type="submit" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
-                       Next
+                    <button (click)="createReport()" type="submit" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
+                       Create Report
                     </button>
-                    <button (click)="goToReports()" type="button" class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800 mr-2">
+                    <button (click)="goToReports()" type="button" class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800 mr-2" data-modal-toggle="defaultModal">
                         Cancel
                     </button>
                 </div>
