--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -1,3 +1,46 @@
-<button (click)="pickTemplate()">
-Save
-</button>
+<div class="container relative mx-auto -mr-56 mt-28 grid grid-cols-2 items-center justify-center gap-4 p-4 overflow-hidden h-full w-full">
+    <div class="relative mb-4 mt-auto h-[600px] w-[100%] grid-cols-1 rounded-lg border border-black bg-white p-6 shadow-lg overflow-hidden">
+      <div class="absolute bottom-4 right-4">
+        <button (click)="pickTemplate()" class="rounded-full bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700">Create</button>
+      </div>
+      <!-- Rectangle Container -->
+      <div class="mx-auto ml-0 mt-4 grid h-[535px] w-[70%] grid-cols-2 gap-10 overflow-y-auto rounded-lg border border-black bg-gray-200 p-4 overflow-hidden">
+        <!-- First Column -->
+        <div class="m-2 h-full w-full">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+        </div>
+        <!-- Second Column -->
+        <div class="m-2 h-full w-full">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+        </div>
+  
+        <div class="m-2 h-full w-full">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+        </div>
+  
+        <div class="m-2 h-full w-full">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
