add edit content

--- a/src/app/core/layout/pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 
 
             <div
-                class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+                class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700 mt-16">
                 <div class="flex items-center justify-between mb-4">
                     <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Users</h5>
 
@@ -29,7 +29,7 @@
                                 </div>
                                 <div
                                     class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                    {{userworkspace["role_name"]}}
+                                    {{userworkspace["name"]}}
                                 </div>
                             </div>
                         </li>
