chore: Update user avatar in navigation and navigation bar components

--- a/src/app/core/layout/pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/pages/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
                         <li *ngFor="let userworkspace of userworkspaces" class="py-3 sm:py-4">
                             <div class="flex items-center">
                                 <div class="flex-shrink-0">
-                                    <img class="w-8 h-8 rounded-full" src="../../assets/img/hacker.png"
+                                    <img class="w-8 h-8 rounded-full object-cover" src="{{userworkspace['image_name']}}"
                                         alt="Neil image">
                                 </div>
                                 <div class="flex-1 min-w-0 ms-4">
