--- a/src/app/core/layout/pages/profile/profile/profile.component.html
+++ b/src/app/core/layout/pages/profile/profile/profile.component.html
@@ -13,9 +13,9 @@
 
           <div class="h-64 w-64 relative flex items-center justify-center rounded-full">
             <div class="flex flex-col items-center justify-center pt-5 pb-6">
-              <img class="rounded-full h-full w-full mt-3" src="{{user.imageName}}" alt="profile">
+              <img class="rounded-full object-cover h-full w-full mt-3" src="{{user.imageName}}" alt="profile">
             </div>
-            <form action="post" class="">
+            <div >
               <label for="dropzone-file" class="absolute left-0 top-1 h-full w-full z-1 flex flex-col col-2 items-center justify-center rounded-full cursor-pointer bg-transparent hover:bg-gray-200 hover:bg-opacity-50">
                 <!-- Tooltip -->
                 <h2 class="absolute bottom-17 left-1/2 transform -translate-x-1/2 px-3 py-2 text-gray-900 bg-white rounded-lg shadow-md hover:bg-gray-50 dark:hover:bg-gray-700 opacity-0 hover:opacity-100 transition-opacity text-nowrap">
@@ -23,8 +23,8 @@
                 </h2>
                 
               </label>
-              <input id="dropzone-file" type="file" class="hidden" />
-            </form>
+              <input id="dropzone-file" type="file" class="hidden" (change)="uploadAvatar($event)" />
+            </div>
           </div>
           
 
