--- a/src/app/shared/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/navigation-bar/navigation-bar.component.html
@@ -18,7 +18,7 @@
                 aria-expanded="false" data-dropdown-toggle="dropdown-user">
                 <!--  -->
                 <span class="sr-only">Open user menu</span>
-                <img class="w-8 h-8 rounded-full" src="../../assets/img/hacker.png" alt="user photo" />
+                <img class="w-8 h-8 rounded-full object-cover " src="{{user.imageName}}" alt="user photo" />
             </button>
             <!-- Dropdown menu -->
             <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600"
