--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -35,7 +35,7 @@
           aria-expanded="false" data-dropdown-toggle="dropdown-user">
           <!--  -->
           <span class="sr-only">Open user menu</span>
-          <img class="w-8 h-8 rounded-full" src="../../assets/img/hacker.png" alt="user photo" />
+          <img class="w-8 h-8 rounded-full object-cover" src="{{user.imageName}}" alt="user photo" />
         </button>
         <!-- Dropdown menu -->
         <div
