--- a/src/app/core/layout/pages/report/reportlist/reportlist.component.html
+++ b/src/app/core/layout/pages/report/reportlist/reportlist.component.html
@@ -47,10 +47,10 @@
                             <table class="w-full text-sm text-left text-gray-50">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                                     <tr class="text-center">
-                                        <th scope="col" class="p-4 whitespace-nowrap">Files Name</th>
+                                        <th scope="col" class="p-4 whitespace-nowrap">Report Name</th>
                                         <th scope="col" class="p-4 whitespace-nowrap">Report Type</th>
-                                        <th scope="col" class="p-2 whitespace-nowrap">Date and Time Created</th>
-                                        <th scope="col" class="p-2 whitespace-nowrap">Date and Time Modified</th>
+                                        <th scope="col" class="p-2 whitespace-nowrap">Date Created</th>
+                                        <th scope="col" class="p-2 whitespace-nowrap">Date Edited</th>
                                         <th scope="col" class="p-2 whitespace-nowrap">Actions</th>
                                     </tr>
                                 </thead>
