--- a/src/app/core/layout/pages/authentication/login/login.component.html
+++ b/src/app/core/layout/pages/authentication/login/login.component.html
@@ -26,40 +26,15 @@
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
                         <input type="password" name="password" id="password" [(ngModel)]="credentials.password"
                             placeholder="••••••••"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 mt-5"
                             required="">
                     </div>
-                    <div class="flex items-center justify-between">
-                        <div class="flex items-start">
-                            <div class="flex items-center h-5">
-                                <input id="remember" aria-describedby="remember" type="checkbox"
-                                    class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                                    required="">
-                            </div>
-                            <div class="ml-3 text-sm">
-                                <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label>
-                            </div>
-                        </div>
-                        <a href="#" class="text-sm font-medium text-primary-600 hover:underline ">Forgot
-                            password?</a>
-                    </div>
+                   
 
-                    <div class="flex items-start">
-                        <div class="flex items-center h-5">
-                            <input id="Terms" aria-describedby="Terms" type="checkbox"
-                                class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                                required="">
-                        </div>
-                        <div class="ml-3 text-sm">
-                            <label for="Terms" class="text-gray-500 dark:text-gray-300">I agree to all the <a href="#"
-                                    class="text-sm font-medium text-primary-600 hover:underline ">Terms</a>
-                                and <a href="#" class="text-sm font-medium text-primary-600 hover:underline ">Privacy
-                                    policy</a></label>
-                        </div>
-                    </div>
+                   
 
                     <button type="submit"
-                        class="w-full text-white bg-black hover:bg-primary-700  font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700  ">Log
+                        class="w-3/4 ml-14 text-white bg-black hover:bg-primary-700  font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700  ">Log
                         In</button>
                     <div class="my-[70px]">
                         <p class="text-sm font-light text-gray-500 dark:text-gray-400 text-center ">
