--- a/src/app/core/layout/pages/authentication/register/register.component.html
+++ b/src/app/core/layout/pages/authentication/register/register.component.html
@@ -1,5 +1,5 @@
 <section class="bg-white dark:bg-gray-900">
-    <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
+    <div class="py-8 px-4 mt-14 mx-auto max-w-2xl lg:py-16 ">
         <div class="flex items-center justify-center">
             <a href="#" class="flex items-center mb-2 text-2xl font-semibold text-gray-900 dark:text-white">
                 <img src="../../../../../../assets/img/anu-wrap.svg" class="h-[100px] w-[100px] me-[-20px] ml-[-40px]"
@@ -15,7 +15,7 @@
                     <input type="text" name="username" id="username" [(ngModel)]="registrationData.username"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                         placeholder="John" required />
-                        <span *ngIf="errors.username" class="text-red-600">{{ errors.username }}</span>
+                    <span *ngIf="errors.username" class="text-red-600">{{ errors.username }}</span>
                 </div>
                 <div class="mb-4">
                     <label for="firstname" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First
@@ -23,7 +23,7 @@
                     <input type="text" name="firstname" id="firstname" [(ngModel)]="registrationData.first_name"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                         placeholder="John" required />
-                        <span *ngIf="errors.firstname" class="text-red-600">{{ errors.firstname }}</span>
+                    <span *ngIf="errors.firstname" class="text-red-600">{{ errors.firstname }}</span>
                 </div>
                 <div class="mb-4">
                     <label for="lastname" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last
@@ -40,7 +40,7 @@
                     <input type="text" name="email" id="email" [(ngModel)]="registrationData.email"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                         placeholder="name@company.com" required />
-                        <span *ngIf="errors.email" class="text-red-600">{{ errors.email }}</span>
+                    <span *ngIf="errors.email" class="text-red-600">{{ errors.email }}</span>
                 </div>
                 <div class="mb-4">
                     <label for="password"
@@ -48,36 +48,18 @@
                     <input type="password" name="password" id="password" [(ngModel)]="registrationData.password"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                         placeholder="•••••••••" required />
-                        <span *ngIf="errors.password" class="text-red-600">{{ errors.password }}</span>
+                    <span *ngIf="errors.password" class="text-red-600">{{ errors.password }}</span>
                 </div>
                 <div class="mb-4">
                     <label for="confirm_password"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm password</label>
                     <input type="password" name="confirm_password" id="confirm_password"
                         [(ngModel)]="registrationData.confirm_password"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[300px] p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                         placeholder="•••••••••" required />
-                        <span *ngIf="errors.password1" class="text-red-600">{{ errors.password1 }}</span>
+                    <span *ngIf="errors.password1" class="text-red-600">{{ errors.password1 }}</span>
                 </div>
-                <div class="flex flex-col items-start mb-4 mt-[-10px]">
-                    <div class="flex items-center justify-between">
-                        <div class="flex items-start">
-                        </div>
-                    </div>
-                    <div class="flex items-start mb-4">
-                        <div class="flex items-center h-5">
-                            <input id="Terms" aria-describedby="Terms" type="checkbox"
-                                class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                                required="">
-                        </div>
-                        <div class="ml-3 text-sm">
-                            <label for="Terms" class="text-gray-500 dark:text-gray-300">I agree to all the <a href="#"
-                                    class="text-sm font-medium text-primary-600 hover:underline ">Terms</a>
-                                and <a href="#" class="text-sm font-medium text-primary-600 hover:underline ">Privacy
-                                    policy</a></label>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
             <button type="submit"
                 class=" text-white bg-black w-2/4 hover:bg-primary-700 col-span-2 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700">Create
