--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -1,46 +1,48 @@
-<div class="container relative mx-auto -mr-56 mt-28 grid grid-cols-2 items-center justify-center gap-4 p-4 overflow-hidden h-full w-full">
-    <div class="relative mb-4 mt-auto h-[600px] w-[100%] grid-cols-1 rounded-lg border border-black bg-white p-6 shadow-lg overflow-hidden">
+<div class="w-full flex items-center justify-center overflow-x-hidden">
+  <div class="container relative mx-auto mt-1 grid grid-cols-1 md:grid-cols-2 items-center justify-center gap-4 overflow-hidden p-4">
+    <div class="relative mb-4 mt-auto h-[600px] w-full md:w-[100%] ml-72 rounded-lg border border-black bg-white p-6 shadow-lg">
       <div class="absolute bottom-4 right-4">
-        <button (click)="pickTemplate()" class="rounded-full bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700">Create</button>
+        <button class=" bg-black px-4 py-2 font-bold text-white hover:bg-blue-primary-700">Create</button>
       </div>
       <!-- Rectangle Container -->
-      <div class="mx-auto ml-0 mt-4 grid h-[535px] w-[70%] grid-cols-2 gap-10 overflow-y-auto rounded-lg border border-black bg-gray-200 p-4 overflow-hidden">
+      <div class="mx-auto mt-4 grid h-[535px] w-full md:w-[70%] grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 gap-4 overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-gray-200 p-4">
         <!-- First Column -->
         <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
             <!-- Example content -->
           </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
             <!-- Example content -->
           </div>
         </div>
         <!-- Second Column -->
         <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
             <!-- Example content -->
           </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-        </div>
-  
-        <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
             <!-- Example content -->
           </div>
         </div>
-  
+        <!-- Third Column -->
         <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
             <!-- Example content -->
           </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto rounded-lg border border-black bg-white p-6 shadow-lg">
+          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+        </div>
+        <!-- Fourth Column -->
+        <div class="m-2 h-full w-full">
+          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
+            <!-- Example content -->
+          </div>
+          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
             <!-- Example content -->
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
