--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -2,7 +2,7 @@
   <div class="container relative mx-auto mt-1 grid grid-cols-1 md:grid-cols-2 items-center justify-center gap-4 overflow-hidden p-4">
     <div class="relative mb-4 mt-auto h-[600px] w-full md:w-[100%] ml-72 rounded-lg border border-black bg-white p-6 shadow-lg">
       <div class="absolute bottom-4 right-4">
-        <button class=" bg-black px-4 py-2 font-bold text-white hover:bg-blue-primary-700">Create</button>
+        <button (click)="pickTemplate()" class=" bg-black px-4 py-2 font-bold text-white hover:bg-blue-700">Create</button>
       </div>
       <!-- Rectangle Container -->
       <div class="mx-auto mt-4 grid h-[535px] w-full md:w-[70%] grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 gap-4 overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-gray-200 p-4">
