add open content

--- a/src/app/core/layout/pages/report/reportlist/reportlist.component.html
+++ b/src/app/core/layout/pages/report/reportlist/reportlist.component.html
@@ -81,7 +81,7 @@
                                         <td
                                             class="flex justify-center items-center px-6 py-3 font-medium text-gray-900 whitespace-nowrap">
                                             <div class="flex items-center justify-evenly gap-3 min-w-80 max-w-md">
-                                                <button (click)="openReport(report.report_id, report.report_type_id)"
+                                                <button (click)="openReport(report.report_id, report.content_id )"
                                                     class="py-2 px-3 flex items-center text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 gap-2">
                                                     <img src="../../assets/img/eye.png" alt="eye logo" class="w-5 h-5">
                                                     <span>Open</span>
