--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -16,20 +16,20 @@
         <!-- First Column -->
         <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
           <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
-            <img [src]="" alt="Template Image">
-          </div>
-        </div>
-
-        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
-          <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
             <img [src]="templates[0].image" alt="Template Image">
           </div>
         </div>
 
-        <!-- Second Column -->
-        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1]) ">
-          <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1])">
+          <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
             <img [src]="templates[1].image" alt="Template Image">
+          </div>
+        </div>
+
+        <!-- Second Column -->
+        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[2]) ">
+          <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+            <img [src]="templates[2].image" alt="Template Image">
           </div>
         </div>
         
