add collage and editreportselection

--- a/src/app/core/layout/pages/content/content.component.html
+++ b/src/app/core/layout/pages/content/content.component.html
@@ -1,10 +1,15 @@
+<div class="h-full overflow-hidden">
 <button (click)="navigateToReportList()" type="button" class="py-2.5 px-5 m-2 mt-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Back</button>
 
 <div *ngIf="successMessage" class="message-popup success-popup">
     {{ successMessage }}
-  </div>
-  <div *ngIf="errorMessage" class="message-popup error-popup">
+</div>
+<div *ngIf="errorMessage" class="message-popup error-popup">
     {{ errorMessage }}
-  </div>
+</div>
 <editor apiKey="wosa4nwcx3nlec1v6cen5dztn0bu47iepff6m1h3jxcq4l5v" [init]="editorConfig"></editor>
+
 <app-ai></app-ai>
+</div>
+
+
