--- a/src/app/core/layout/pages/collage/collageitem/collageitem.component.html
+++ b/src/app/core/layout/pages/collage/collageitem/collageitem.component.html
@@ -1,1 +1,20 @@
-<p>collageitem works!</p>
+<div class="w-full h-full flex justify-center items-center absolute ">
+    <div class="bg-blue-300 w-[50%] h-[50%] flex flex-col">
+        <div class=" flex flex-row bg-red-400 w-full h-[50%]">
+            <div class="bg-yellow-300 h-full w-full border border-black">
+
+            </div>
+            <div class="bg-green-400 h-full w-full border border-black">
+
+            </div>
+        </div>
+        <div class="flex flex-row bg-red-600 w-full h-[50%]">
+            <div class="bg-blue-300 h-full w-full border border-black">
+
+            </div>
+            <div class="bg-orange-400 h-full w-full border border-black">
+
+            </div>
+        </div>
+    </div>
+</div>
