add chat history

--- a/src/app/core/layout/pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/pages/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
           class="bg-gray-100 text-gray-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{code}}</span>
       </div>
 
-      <div class="max-w-sm w-full mt-12 bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+      <div class="max-w-md w-full max-h-[480px] overflow-y-auto mt-12 bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
         <div class="flex justify-between mb-5">
           <div>
             <h5 class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2">{{numberOfReports}}</h5>
@@ -99,3 +99,4 @@
     </div>
   </main>
 </div>
+<app-ai></app-ai>
