--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -1,24 +1,28 @@
 <div class="w-full overflow-x-hidden">
   <div class="container relative mx-auto mt-10 grid items-center justify-center gap-4 overflow-hidden p-4 md:grid-cols-1 sm:grid-cols-1 sm:w-[60%]">
-    <div class="ml-8 relative mt-auto h-[650px] w-full rounded-lg border border-gray-200 p-6 shadow-md md:w-[90%] sm:w-[80%]">
+    <div class="mx-12 relative mt-auto h-[650px] w-full rounded-lg border border-gray-200 p-6 shadow-md md:w-[80%] sm:w-[80%]">
 
-      <div class="absolute bottom-8 right-8 sm:ml-16 grid grid-flow-col gap-4">
-        <button (click)="pickTemplate(contentId)" class="w-[fit-content] focus:ring-blue-primary-700 rounded-md bg-black px-5 py-2 text-sm font-bold text-white transition duration-300 ease-in-out hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-opacity-50 sm:px-3 sm:text-sm md:ml-40 ">Create</button>
-        <button (click)="navigateToReportList()" class="w-[fit-content] focus:ring-blue-primary-700 rounded-md bg-black px-5 py-2 text-sm font-bold text-white transition duration-300 ease-in-out hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-opacity-50 sm:px-3 sm:text-sm">Cancel</button>
+      <div class="absolute bottom-8 mr-4 right-8 sm:ml-16 grid grid-flow-col gap-4">
+        <button (click)="pickTemplate(contentId)"class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">Create</button>
+        <button (click)="navigateToReportList()" class="flex items-center justify-center text-white bg-black border-red-700 hover:bg-red-700 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2 text-center">Cancel</button>
       </div>
 
       <div class="my-10 mx-10  grid h-[550px] w-[80%]  gap-4 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300  p-4 sm:grid-cols-1 sm:w-[60%]  md:w-[50%] grid-cols-1  lg:grid-cols-2 ">
     
-        <div class="absolute top-2 left-1/2 transform -translate-x-1/2 mt-1.5 text-center">
-          <p class="flex items-center justify-start p-2 text-base font-medium text-gray-900 rounded-lg shadow-md hover:bg-gray-100 dark:hover:bg-gray-300 group gap-2 text-nowrap">Select a Template</p>
+        <div class="hidden sm:block absolute top-2 left-1/2 transform -translate-x-1/2 mt-1.5 text-center">
+          <p class="flex items-center justify-start p-2 text-base font-medium text-gray-900 rounded-lg shadow-md hover:bg-gray-100 dark:hover:bg-gray-300 group gap-2 text-nowrap">
+            Select a Template
+          </p>
         </div>
 
 <!-- Blank Template -->
 <label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
   <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 1">
+    </div>
     <div class="text-center mb-2 flex-row">
       <p class="text-gray-600 text-sm font-medium">Blank Template</p>
-      <input type="radio" name="template" [checked]="selectedTemplate === 0">
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[0].image" alt="Template Image">
@@ -29,9 +33,11 @@
 <!-- Accomplishment Report -->
 <label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1])">
   <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 0">
+    </div>
     <div class="text-center mb-2 flex-row">
       <p class="text-gray-600 text-sm font-medium">Accomplishment Report</p>
-      <input type="radio" name="template" [checked]="selectedTemplate === 1">
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[1].image" alt="Template Image">
@@ -43,36 +49,85 @@
      <!-- Faculty Matrix -->
 <label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[2])">
   <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 1">
+    </div>
     <div class="text-center mb-2 flex-row">
       <p class="text-gray-600 text-sm font-medium">Faculty Matrix</p>
-      <input type="radio" name="template" [checked]="selectedTemplate === 2">
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[2].image" alt="Template Image">
     </label>
   </div>
 </label>
-      <!-- Template 3-->
+      <!-- Teaching and Learning-->
 <label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[3])">
   <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 2">
+    </div>
     <div class="text-center mb-2 flex-row">
       <p class="text-gray-600 text-sm font-medium">Teaching and Learning</p>
-      <input type="radio" name="template" [checked]="selectedTemplate === 3">
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[3].image" alt="Template Image">
     </label>
   </div>
 </label>
-      <!-- Template 4-->
+      <!-- Faculty schedule-->
 <label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[4])">
   <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 3">
+    </div>
     <div class="text-center mb-2 flex-row">
       <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
-      <input type="radio" name="template" [checked]="selectedTemplate === 4">
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[4].image" alt="Template Image">
+    </label>
+  </div>
+</label>
+
+<!-- Event report -->
+<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[5])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 5">
+    </div>
+    <div class="text-center mb-2 flex-row">
+      <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
+    </div>
+    <label class="flex justify-center items-center">
+      <img [src]="templates[5].image" alt="Template Image">
+    </label>
+  </div>
+</label>
+<!-- Financial report -->
+<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[6])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 5">
+    </div>
+    <div class="text-center mb-2 flex-row">
+      <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
+    </div>
+    <label class="flex justify-center items-center">
+      <img [src]="templates[6].image" alt="Template Image">
+    </label>
+  </div>
+</label>
+<!-- summary of accomplishment report -->
+<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[7])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 -mt-5 flex-row">
+      <input type="radio" name="template" [checked]="selectedTemplate === 6">
+    </div>
+    <div class="text-center mb-2 flex-row">
+      <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
+    </div>
+    <label class="flex justify-center items-center">
+      <img [src]="templates[7].image" alt="Template Image">
     </label>
   </div>
 </label>
