--- a/src/app/shared/ai/ai.component.html
+++ b/src/app/shared/ai/ai.component.html
@@ -3,19 +3,15 @@
     <img src="assets/img/Robotmascot.png" alt="Chat Icon" class="h-full w-full object-cover">
 </button>
 
-
-<!-- [@slideInOut]="isOpen ? 'in' : 'out'" -->
-
-<div class="chat-popup" *ngIf="isOpen" > 
-  <div class="chat-popup fixed bottom-5 right-5 flex items-end justify-end max-w-full" >
+<div class="chat-popup z-[1000]" *ngIf="isOpen"  > 
+  <div class="chat-popup fixed bottom-5 right-5 flex items-end justify-end max-w-full">
       <div class="flex flex-col w-full max-w-lg p-6">
           <div class="flex flex-col flex-auto flex-shrink-0 bg-gray-100 p-4 rounded-2xl shadow-lg">
               <!-- Profile section -->
               <div class="flex items-center justify-between pb-3 border-b border-gray-300">
                   <div class="flex items-center">
                       <div class="w-12 h-12 bg-gray-300 rounded-full flex items-center justify-center overflow-hidden">
-                          <img src="../../../assets/img/Robotmascot.png" alt="Profile Picture"
-                              class="rounded-full object-cover w-full h-full">
+                          <img src="../../../assets/img/Robotmascot.png" alt="Profile Picture" class="rounded-full object-cover w-full h-full">
                       </div>
                       <div class="ml-4">
                           <div class="text-lg font-semibold">CHATBOT</div>
@@ -27,15 +23,15 @@
               <!-- End of profile section -->
 
               <!-- Chat wrapper -->
-              <div class="chat-wrapper bg-white border border-gray-300 rounded-xl p-4 overflow-y-auto flex-1 my-4">
+              <div class="chat-wrapper bg-white border border-gray-300 rounded-xl p-4 overflow-y-auto flex-1 my-4 max-h-[300px]">
                   <!-- Chat messages here -->
-                  <div class="p-3 rounded-lg">
-                      <div class="flex flex-row items-center">
-                          <div
-                              class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl whitespace-pre-line min-w-50">
+                  <div *ngFor="let msg of conversation" class="p-3 rounded-lg">
+                      <div class="flex flex-row items-center" [ngClass]="{'justify-end': msg.role === 'user', 'justify-start': msg.role === 'ai'}">
+                          <div class="relative ml-3 text-sm py-2 px-4 shadow rounded-xl whitespace-pre-line min-w-50" 
+                               [ngClass]="{'bg-blue-200': msg.role === 'user', 'bg-gray-200': msg.role === 'ai'}">
                               <div class="max-h-48 overflow-y-auto">
                                   <code>
-                                      {{ aiResponse }}
+                                      {{ msg.content }}
                                   </code>
                               </div>
                           </div>
