--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -96,7 +96,7 @@
       <input type="radio" name="template" [checked]="selectedTemplate === 5">
     </div>
     <div class="text-center mb-2 flex-row">
-      <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
+      <p class="text-gray-600 text-sm font-medium">Event Report</p>
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[5].image" alt="Template Image">
@@ -110,7 +110,7 @@
       <input type="radio" name="template" [checked]="selectedTemplate === 5">
     </div>
     <div class="text-center mb-2 flex-row">
-      <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
+      <p class="text-gray-600 text-sm font-medium">Financial Report</p>
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[6].image" alt="Template Image">
@@ -124,7 +124,7 @@
       <input type="radio" name="template" [checked]="selectedTemplate === 6">
     </div>
     <div class="text-center mb-2 flex-row">
-      <p class="text-gray-600 text-sm font-medium">Faculty Schedule</p>
+      <p class="text-gray-600 text-sm font-medium">Summary of Accomplishment Report</p>
     </div>
     <label class="flex justify-center items-center">
       <img [src]="templates[7].image" alt="Template Image">
