--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -18,27 +18,7 @@
         </div>
       </div>
       <div class="flex items-center lg:order-2">
-        <button type="button" class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" aria-expanded="false" data-dropdown-toggle="dropdown-user">
-          <span class="sr-only">Open user menu</span>
-          <img class="w-8 h-8 rounded-full object-cover" src="{{user.imageName}}" alt="user photo" />
-        </button>
-        <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600" id="dropdown-user">
-          <div class="px-4 py-3" role="none">
-            <p class="text-sm text-gray-900 dark:text-white" role="none">{{ user.username }}</p>
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">{{ user.email }}</p>
-          </div>
-          <ul class="py-1" role="none">
-            <li>
-              <a routerLink="/profile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Profile</a>
-            </li>
-            <li>
-              <a routerLink="/workspacelist" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Workspaces</a>
-            </li>
-            <li>
-              <button (click)="signOut()" class="block px-4 py-2 text-sm text-start w-full text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Sign out</button>
-            </li>
-          </ul>
-        </div>
+        <app-dropdown></app-dropdown>
       </div>
     </div>
   </nav>
