--- a/src/app/core/layout/pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <main class="grid grid-cols-2 p-4 md:mx-[35px] h-auto pt-20">
     <div class="h-96 mb-4">
       <div
-        class="flex justify-center w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mt-12">
+        class="flex justify-center w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700 mt-12">
         <span
           class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-green-400 border border-green-400">Workspace
           invite code:</span>
@@ -11,7 +11,7 @@
           class="bg-gray-100 text-gray-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{code}}</span>
       </div>
 
-      <div class="max-w-md w-full max-h-[480px] overflow-y-auto mt-12 bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+      <div class="max-w-md w-full max-h-[480px] overflow-y-auto mt-12 bg-white rounded-lg dark:bg-gray-800 p-4 shadow-md md:p-6">
         <div class="flex justify-between mb-5">
           <div>
             <h5 class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2">{{numberOfReports}}</h5>
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700 mt-12">
+      class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700 mt-12">
       <div class="flex items-center justify-between mb-4">
         <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Users</h5>
       </div>
