--- a/src/app/core/layout/pages/reportselection/createreportselection/createreportselection.component.html
+++ b/src/app/core/layout/pages/reportselection/createreportselection/createreportselection.component.html
@@ -46,6 +46,8 @@
                 <input id="checkbox-select-all" type="checkbox" (change)="toggleSelectAll();">
                 <label for="checkbox-select-all">Select All</label>
               </th>
+              <th scope="col" class="px-6 py-3">Title</th>
+              <th scope="col" class="px-6 py-3">Date Created</th>
             </tr>
           </thead>
           <tbody>
@@ -56,8 +58,11 @@
                   <label for="checkbox-table-search-{{report.report_id}}" class="sr-only">checkbox</label>
                 </div>
               </td>
-              <td scope="row" class="w-full px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:bg-gray-700">
+              <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:bg-gray-700">
                 {{ report.title }}
+              </td>
+              <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:bg-gray-700">
+                {{ report.date_created }}
               </td>
             </tr>
           </tbody>
